Correct emoji alignment

--- a/_scss/_eng.scss
+++ b/_scss/_eng.scss
@@ -46,7 +46,7 @@ img[align="middle"] { clear: both; display: block; float: none; margin: 0 auto; 
 .center, .centered { margin: 0 auto; text-align: center; }
 .alignright { float: right; margin-left: 1.571em; }
 .alignleft { float: left; margin-right: 1.571em; }
-
+.emoji { vertical-align: text-top; }
 /* Everywhere */
 embed, object, video, iframe { max-width: 100%; }
 
